Sat Oct 18 12:36:22 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

	* orbsvcs/orbsvcs/RTCosScheduling/RTCosScheduling_ClientScheduler_i.cpp: 
	  Changed constructor definition to match prototype. This was
	  causing undefined symbol errors in SunCC.
	
Sat Oct 18 10:16:20 2003  Yamuna Krishnamurthy  <yamuna@oomworks.com>

	Added Stream Control Transmission Protocol (SCTP) to the AVStreams
	pluggable protocol. This allows users to choose SCTP as their
	transport protocol to send and receive data. The SCTP protocol is
	available only when the sctp flag is set.

	* orbsvcs/orbsvcs/AV/SCTP_SEQ.h: 
	* orbsvcs/orbsvcs/AV/SCTP_SEQ.cpp: 

	Contains acceptors, connectors and flow handlers to setup SCTP
	associations and send and receive data.
	
	* orbsvcs/orbsvcs/AV/FlowSpec_Entry.h: 
	* orbsvcs/orbsvcs/AV/FlowSpec_Entry.cpp: 
	* orbsvcs/orbsvcs/AV/FlowSpec_Entry.i: 	

	Changed the flow specification string format to accomodate the
	specification of secondary addresses for SCTP. 
	Initial format:
	"Flowname/Direction/Format/Flow_Prtocol/Sender_Address/Receiver_Address". 
	Changed to:
	"Flowname/Direction/Format/Flow_Prtocol/Sender_Primary_Address;
	Sender_Secondary_Address1;Sender_Secondary_Address2.../Receiver_Primary_Address;
	Receiver_Secondary_Address1;Receiver_Secondary_Address2...".

	Added accessor methods to set/get remote and local secondary
	addresses.

	* orbsvcs/orbsvcs/AV/AV_Core.cpp: 
	* orbsvcs/orbsvcs/AV/AV_Core.h: 

	Added support to load SCTP transport protocol.
	
	* orbsvcs/orbsvcs/Makefile.av: 

	Modified the Makefile to compile SCTP related files.

	* orbsvcs/tests/AVStreams/Simple_Two_Stage/run_test.pl: 	

	Added a test to test with SCTP protocol.
	
Sat Oct 18 09:30:40 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

	* orbsvcs/tests/RTCosScheduling/RTCosScheduling.mpc: 
	* orbsvcs/tests/RTCosScheduling/Makefile: Fixed a build dependency
	  problem. 


Sat Oct 18 08:52:15 2003  Venkita Subramonian  <venkita@cs.wustl.edu>
